<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizanimals.MainActivity"
    android:id="@+id/mainScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--This is intro of Quizz App with welcome text and
        field to insert name in.-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introText"
            android:textStyle="bold"
            style="@style/quizHeadlines"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/yourName"
                android:layout_weight="1"
                style="@style/quizHeadlines"/>

            <EditText
                style="@style/quizEditText"
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nameField"
                android:inputType="textCapWords"
                android:layout_weight="1"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>
            />

        <!--Question #1 with 3 RadioButton answers.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/quizAnswers"
                android:id="@+id/Q1Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A1"/>
            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A2"/>
            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A3"/>

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #2 with EditText field.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question2"/>

        <EditText
            style="@style/quizEditText"
            android:id="@+id/Q2AnswerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Q5hint"
            android:inputType="text" />

        <ImageView
            android:contentDescription="Line between questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question3" />


        <!--Question #3 with 3 CheckBox answers(3 right)-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q3Answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A1"/>

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q3Answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A2"/>

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q3Answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A3"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #4 with 3 RadioButton answers.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question4"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4A1"/>

            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4A2"/>

            <RadioButton
                style="@style/quizAnswers"
                android:id="@+id/Q4Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4A3"/>

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #5 with EditText field.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question5"/>

        <EditText
            style="@style/quizEditText"
            android:id="@+id/Q5AnswerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Q5hint"
            android:inputType="text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #6 with 3 CheckBox answers(2 right)-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q6Answer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q6A1"/>

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q6Answer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q6A2"/>

            <CheckBox
                style="@style/quizAnswers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q6A3"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #7 with 3 RadioButton answers.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question7"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7A1"/>

            <RadioButton
                style="@style/quizAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7A2"/>

            <RadioButton
                style="@style/quizAnswers"
                android:id="@+id/Q7Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7A3"/>

        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #8 with EditText field.-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question8"/>

        <EditText
            style="@style/quizEditText"
            android:id="@+id/Q8AnswerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Q8hint"
            android:inputType="text"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/border"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <!--Question #9 with 3 CheckBox answers(2 right)-->
        <TextView
            style="@style/quizQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q9Answer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q9A1" />

            <CheckBox
                style="@style/quizAnswers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q9A2"/>

            <CheckBox
                style="@style/quizAnswers"
                android:id="@+id/Q9Answer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Q9A3"/>

        </LinearLayout>

        <Button
            android:id="@+id/result_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showResults"
            android:text="@string/result_button"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:backgroundTint="@color/secondaryLightColor"/>

        <TextView
            style="@style/quizHeadlines"
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="restartQuiz"
            android:text="@string/restart_button"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:backgroundTint="@color/secondaryLightColor"/>

    </LinearLayout>


</ScrollView>
